--- a/config/recurring.yml
+++ b/config/recurring.yml
@@ -1,4 +1,4 @@
-production:
+default: &default
   clear_solid_queue_finished_jobs:
     command: "SolidQueue::Job.clear_finished_in_batches(sleep_between_batches: 0.3)"
     schedule: every hour at minute 12
@@ -6,10 +6,13 @@ production:
   import_market_data:
     class: "ImportMarketDataJob"
     queue: "scheduled"
-    args: { opts: { mode: "full", clear_cache: true } } # maybe this is wrong, but the job runs fine, so :shrug:
+    # args: [{ mode: 'full', clear_cache: true }] # maybe this is wrong, but the job runs fine, so :shrug:
+    args: [{ mode: 'snapshot', clear_cache: false }] # maybe this is wrong, but the job runs fine, so :shrug:
     schedule: "0 22 * * 1-5" # 5:00 PM EST / 6:00 PM EDT (NY time) Monday through Friday
     description: "Imports market data daily at 5:00 PM EST (1 hour after market close)"
 
+production:
+  <<: *default
   clean_syncs:
     schedule: "0 * * * *" # every hour
     class: "SyncCleanerJob"
@@ -21,3 +24,6 @@ production:
     class: "SecurityHealthCheckJob"
     queue: "scheduled"
     description: "Runs security health checks to detect issues with security data"
+
+development:
+  <<: *default
