--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,6 +76,11 @@ jobs:
   test:
     runs-on: ubuntu-latest
     timeout-minutes: 10
+    
+    env:
+      PLAID_CLIENT_ID: foo
+      PLAID_SECRET: bar
+      RAILS_ENV: test
 
     steps:
       - name: Install packages
