Try to support asg017/ulid on Arm64 linux

--- a/config/database.yml
+++ b/config/database.yml
@@ -9,6 +9,8 @@ development:
   primary:
     <<: *default
     database: storage/development_primary.sqlite3
+    extensions:
+      - <%= Sqlpkg.path_for("asg017/ulid") %>
   cache:
     <<: *default
     database: storage/development_cache.sqlite3
