--- a/config/database.yml
+++ b/config/database.yml
@@ -1,6 +1,6 @@
 default: &default
   adapter: sqlite3
-  retries: 55
+  timeout: 5000
   default_transaction_mode: IMMEDIATE
   pragmas:
     foreign_keys: "ON"
