--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -101,8 +101,11 @@ jobs:
           bin/rails db:schema:load
           bin/rails db:seed
 
-      - name: Unit and integration tests and system tests
+      - name: Unit and integration tests
         run: bin/rails test:all
+
+      - name: System tests
+        run: bin/rails test:system
 
       - name: Keep screenshots from failed system tests
         uses: actions/upload-artifact@v4
