system tests and other tests separately

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -102,7 +102,7 @@ jobs:
           bin/rails db:seed
 
       - name: Unit and integration tests
-        run: bin/rails test:all
+        run: bin/rails test
 
       - name: System tests
         run: bin/rails test:system
