--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,6 +78,8 @@ jobs:
     timeout-minutes: 10
 
     env:
+      PLAID_CLIENT_ID: foo
+      PLAID_SECRET: bar
       RAILS_ENV: test
 
     steps:
